# GitConfigParser.py

./: README.md  description.txt  requirements.txt  setup.cfg
.data/README/usage/: usage.py.txt
.data/python/: README.rst
Examples/gitconfig/: gitconfig.sections()  gitconfig.sections()c
GitConfigParser/: __init__.py
README/WEBLOC/: configparser - Configuration file parser.webloc
py_modules/: gitconfigparser.py
